# source-coop-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  fastmcp.json  pyproject.toml
.github/scripts/: generate_report.py
.github/workflows/: README.md  publish.yml  test-and-report.yml
docs/: ARCHITECTURE.md  PUBLISHING.md  RELEASE_CHECKLIST.md  RELEASING.md  SOURCE_COOP_API.md
scripts/: release.sh
src/source_coop_mcp/: server.py
tests/: test_all_mcp_tools.py  test_api_vs_obstore.py  test_fused_overture.py  test_obstore.py  test_product_details_with_readme.py  test_s3_discovery.py  test_search.py  test_simplified_readme_integration.py
